yaze (1.14+dfsg.2-3) UNRELEASED; urgency=low

  * UNRELEASED
  * debian/control: Extend package description.

 --

yaze (1.14+dfsg.2-2) unstable; urgency=low

  * debian/tests: Add support for functional testing with debci.
  * debian/TODO.Debian: Update and mark support for functional
    testing of Debian packages as done.  Add references to Z80
    native assembler.
  * debian/patches: Refactoring the quilt patch set to fix the
    second rebuild of the intermediate artefact simz80.c on stage
    dh_install.

 -- Stephan Linz <linz@li-pro.net>  Sun, 05 Nov 2017 11:44:31 +0100

yaze (1.14+dfsg.2-1) unstable; urgency=low

  * debian/clean: Do not remove simz80.c -- there will be a new
    quilt patch set to force rebuild of this intermediate artefact.
  * debian/repack: Do not remove the intermediate artefact simz80.c
    from dfsg tar file.
  * debian/patches: Refactoring the quilt patch set to support
    rebuild of the intermediate artefact simz80.c and the Debian
    hardening option (_FORTIFY_SOURCE=2).
  * debian/rules, debian/yaze.lintian-overrides: Remove all Debian
    maintenance options related to hardening overrides.
  * debian/TODO.Debian: Update and mark Debian maintenance overrides
    related to hardening as done.

 -- Stephan Linz <linz@li-pro.net>  Sun, 29 Oct 2017 11:25:10 +0100

yaze (1.14+dfsg.1-2) unstable; urgency=low

  * debian/clean: Remove all artefacts not handle by upstream make.
  * debian/rules: Install upstream changelog (Fixes: lintian pedantic
    tag no-upstream-changelog).
  * debian/watch: Add upstream's pgp key to verify new releases.

 -- Stephan Linz <linz@li-pro.net>  Sat, 28 Oct 2017 09:21:26 +0200

yaze (1.14+dfsg.1-1) unstable; urgency=low

  * Initial release (Closes: #877235).

 -- Stephan Linz <linz@li-pro.net>  Sat, 30 Sep 2017 13:31:15 +0200