@@ -1,3 +1,4 @@
+From 19ad078d691adb08595f8191aa4ce77fa30cfc39 Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Thu, 29 Oct 2015 23:07:03 +0100
 Subject: fix groff warning: macro `PU' not defined
