@@ -1,3 +1,4 @@
+From 95c9539f7ef5e2628eb3474855c3e4430c9fbad6 Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Mon, 1 Sep 2014 19:47:38 +0200
 Subject: clear generated binaries
