@@ -1,3 +1,4 @@
+From 6cc50693a4337b326e7b6740ee674784a2b9db94 Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Tue, 17 Oct 2017 20:16:14 +0200
 Subject: manpage: remove hard coded directory name
