@@ -1,3 +1,4 @@
+From 43c89ad79f73b47a7586eedf32b818960dfbcfe9 Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Sat, 28 Oct 2017 07:57:52 +0200
 Subject: declare phony rules for special make targets
