@@ -1,3 +1,4 @@
+From a9be407069b90a65a7d12ad07206e784c770d37e Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Sun, 29 Oct 2017 09:45:31 +0100
 Subject: respect and use system wide CFLAGS and LDFLAGS
